import ("//third_party/wayland_standard/wayland_protocol.gni")

## Generate Wayland Protocols {{{
wayland_protocol("linux_dmabuf_unstable_v1_protocol") {
  sources = [ "unstable/linux-dmabuf/linux-dmabuf-unstable-v1.xml" ]
}
wayland_protocol("presentation_time_protocol") {
  sources = [ "stable/presentation-time/presentation-time.xml" ]
}
wayland_protocol("viewporter_protocol") {
  sources = [ "stable/viewporter/viewporter.xml" ]
}
wayland_protocol("relative_pointer_unstable_v1_protocol") {
  sources = [ "unstable/relative-pointer/relative-pointer-unstable-v1.xml" ]
}
wayland_protocol("pointer_constraints_unstable_v1_protocol") {
  sources = [ "unstable/pointer-constraints/pointer-constraints-unstable-v1.xml" ]
}
wayland_protocol("input_timestamps_unstable_v1_protocol") {
  sources = [ "unstable/input-timestamps/input-timestamps-unstable-v1.xml" ]
}
wayland_protocol("xdg_output_unstable_v1_protocol") {
  sources = [ "unstable/xdg-output/xdg-output-unstable-v1.xml" ]
}
wayland_protocol("linux_explicit_synchronization_unstable_v1_protocol") {
  sources = [ "unstable/linux-explicit-synchronization/linux-explicit-synchronization-unstable-v1.xml" ]
}
wayland_protocol("input_method_unstable_v1_protocol") {
  sources = [ "unstable/input-method/input-method-unstable-v1.xml" ]
}
wayland_protocol("text_input_unstable_v1_protocol") {
  sources = [ "unstable/text-input/text-input-unstable-v1.xml" ]
}
wayland_protocol("xdg_shell_protocol") {
  sources = [ "stable/xdg-shell/xdg-shell.xml" ]
}
wayland_protocol("xdg_shell_unstable_v6_protocol") {
  sources = [ "unstable/xdg-shell/xdg-shell-unstable-v6.xml" ]
}
## Generate Wayland Protocols }}}
